# AIteller

./: .gitignore  LICENSE  README.md  pyproject.toml  setup_scheduler.bat
config/: .env.example  config.example.yaml  feeds.yaml  known_experts.yaml
src/: config.py  main.py
src/collectors/: arxiv_collector.py  base.py  bilibili.py  devto.py  github_trending.py  hackernews.py  hf_papers.py  lobsters.py  medium.py  reddit.py  rss_blogs.py  twitter_api.py  youtube.py
src/notifiers/: base.py  email_notifier.py  slack.py  wechat.py
src/processor/: dedup.py  filter.py  scorer.py  summarizer.py
src/prompts/: filter.py
src/report/: __init__.py  generator.py  i18n.py  weekly.py
src/storage/: db.py
src/storage/migrations/: 001_initial.sql  002_scoring_fts.sql
src/utils/: extractor.py  llm.py  retry.py
tests/: conftest.py  test_config.py  test_db.py  test_llm.py
tests/collectors/: conftest.py  test_arxiv.py  test_bilibili.py  test_github_trending.py  test_hackernews.py  test_reddit.py  test_rss_blogs.py  test_twitter.py  test_youtube.py
tests/notifiers/: test_email.py  test_slack.py  test_wechat.py
tests/processor/: test_dedup.py  test_filter.py  test_scorer.py  test_summarizer.py
tests/report/: test_weekly.py
