[project]
name = "aiteller"
version = "0.1.0"
description = "AI engineering practice content aggregator with Chinese PDF reports"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "aiosqlite>=0.19.0",
    "feedparser>=6.0.0",
    "beautifulsoup4>=4.12.0",
    "trafilatura>=1.6.0",
    "anthropic>=0.39.0",
    "openai>=1.50.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "tenacity>=8.2.0",
    "portalocker>=2.8.0",
    "fpdf2>=2.8.0",
    "deep-translator>=1.11.4",
    "yt-dlp>=2026.3.17",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "aioresponses>=0.7.6",
]
